--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@wangeditor/editor-for-vue": "^5.1.12",
     "animate.css": "^4.1.1",
     "axios": "^1.2.2",
+    "cherry-markdown": "^0.8.17",
     "china-area-data": "^5.0.1",
     "cropperjs": "^1.5.12",
     "dayjs": "^1.11.7",
@@ -53,6 +54,7 @@
     "js-cookie": "^3.0.1",
     "jsbarcode": "^3.11.5",
     "md-editor-v3": "^2.7.2",
+    "mermaid": "8.11.1",
     "mitt": "^3.0.0",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
