--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@onlyy/admin",
-  "version": "3.9.7",
+  "version": "1.0.1",
   "private": true,
   "scripts": {
-    "dev": "NODE_OPTIONS=--max-old-space-size=4096 vite",
+    "dev": "npx --max-old-space-size=4096 vite",
     "serve": "pnpm dev",
     "build": "rimraf dist && NODE_OPTIONS=--max-old-space-size=8192 vite build",
     "build:staging": "rimraf dist && vite build --mode staging",
