--- a/public/serverConfig.json
+++ b/public/serverConfig.json
@@ -1,6 +1,6 @@
 {
   "Version": "3.9.7",
-  "Title": "PureAdmin",
+  "Title": "OnlyyAdmin",
   "FixedHeader": true,
   "HiddenSideBar": false,
   "MultiTagsCache": false,
