--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,5 @@
 shamefully-hoist=true
 strict-peer-dependencies=false
 shell-emulator=true
+registry=https://registry.npmjs.org/
+# registry=https://registry.npm.taobao.org
