--- a/package.json
+++ b/package.json
@@ -80,6 +80,8 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.0-0",
+    "@babel/preset-env": "^7.21.4",
     "@commitlint/cli": "13.1.0",
     "@commitlint/config-conventional": "13.1.0",
     "@iconify-icons/ep": "^1.2.10",
